--- a/ts/package.json
+++ b/ts/package.json
@@ -1,10 +1,11 @@
 {
   "devDependencies": {
+    "jest": "^29.7.0",
     "typescript": "^5.6.2"
   },
-
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest"
   }
 }
